[tool.poetry]
name = "wibbley"
version = "0.1.0"
description = ""
authors = ["Ryan Wible <ryanwiblecoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.10"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"