[tool.poetry]
name = "wibbley"
version = "0.1.0"
description="An asynchronous web framework for event-driven applications"
authors = ["Ryan Wible <ryanwiblecoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.9.10"
click = "^8.1.7"
uvicorn = "^0.27.1"
uvloop = "^0.19.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
sqlalchemy = "^2.0.26"
pytest-cov = "^4.1.0"
exceptiongroup = "^1.2.0"
ruff = "^0.2.2"

[tool.poetry.scripts]
wibbley = "wibbley.main:main"

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
